--- a/style.css
+++ b/style.css
@@ -76,35 +76,6 @@ li>a {
     margin-right: 1em;
 }
 
-@media screen and (max-width: 600px) {
-    .navbar a:not(:first-child) {
-        display: none;
-    }
-
-    .navbar a.icon {
-        float: right;
-        display: block;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .navbar.responsive {
-        position: relative;
-    }
-
-    .navbar.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .navbar.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-}
-
 .char {
     margin-top: 3em;
     text-align: center;
@@ -139,35 +110,109 @@ li>a {
     border-radius: 2em;
     margin-top: .5em;
     margin-bottom: 1em;
-    width: 30em;
+    width: 20em;
     height: auto;
 }
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 400px) {
+
+    .char {
+        font-size: 1.5rem;
+    }
+
+    .by-2 {
+        flex-direction: column;
+        margin: auto;
+        width: 50%;
+    }
+
     .msg {
         border-radius: 3em;
         margin-top: 1em;
         margin-bottom: 1em;
-        width: 30em;
+        width: 20em;
     }
+
+}
+
+@media only screen and (min-width: 600px) {
+
+    .char {
+        font-size: 2rem;
+    }
+
+    .by-2 {
+        flex-direction: row;
+        margin: auto;
+    }
+
+    .msg {
+        border-radius: 3em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        width: 20em;
+    }
+
 }
 
 @media only screen and (min-width: 768px) {
+
+    .char {
+        font-size: 2rem;
+    }
+
+    .by-2 {
+        flex-direction: row;
+        margin: auto;
+    }
+
     .msg {
         border-radius: 2em;
         margin-top: 1em;
         margin-bottom: 1em;
         width: 50em;
     }
+
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 992px) {
+
+    .char {
+        font-size: 2rem;
+    }
+
+    .by-2 {
+        flex-direction: row;
+        margin: auto;
+    }
+
     .msg {
         border-radius: 2em;
         margin-top: 1em;
         margin-bottom: 1em;
         width: 60em;
     }
+
+}
+
+@media only screen and (min-width: 1200px) {
+
+    .char {
+        font-size: 2rem;
+    }
+
+    .by-2 {
+        flex-direction: row;
+        margin: auto;
+    }
+
+    .msg {
+        border-radius: 2em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        width: 80em;
+    }
+
 }
 
 .pp:hover {
@@ -221,6 +266,12 @@ li>a {
     visibility: visible;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
+}
+
+@media only screen and (min-width: 400px) {
+    .popup .popuptext {
+        font-size: 2rem;
+    }
 }
 
 /* Add animation (fade in the popup) */
