--- a/style.css
+++ b/style.css
@@ -117,13 +117,15 @@ li>a {
 @media only screen and (min-width: 400px) {
 
     .char {
+        margin-top: 4em;
         font-size: 1.5rem;
     }
 
     .by-2 {
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         margin: auto;
-        width: 50%;
     }
 
     .msg {
@@ -138,11 +140,14 @@ li>a {
 @media only screen and (min-width: 600px) {
 
     .char {
+        margin-top: 4em;
         font-size: 2rem;
     }
 
     .by-2 {
-        flex-direction: row;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         margin: auto;
     }
 
