--- a/style.css
+++ b/style.css
@@ -114,6 +114,74 @@ li>a {
     height: auto;
 }
 
+@media only screen and (min-width: 200px) {
+
+    .char {
+        margin-top: 4em;
+        font-size: 1.5rem;
+    }
+
+    .by-2 {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+
+    .pp {
+        width: 5em;
+        height: 5em;
+        border: 1em solid #00296b;
+        border-radius: 2.5em;
+        margin: auto;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        transition: .2s linear;
+    }
+
+    .msg {
+        border-radius: 3em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        width: 20em;
+    }
+
+}
+
+@media only screen and (min-width: 320px) {
+
+    .char {
+        margin-top: 4em;
+        font-size: 1.5rem;
+    }
+
+    .by-2 {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+
+    .pp {
+        width: 10em;
+        height: 10em;
+        border: 1em solid #00296b;
+        border-radius: 5em;
+        margin: auto;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        transition: .2s linear;
+    }
+
+    .msg {
+        border-radius: 3em;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        width: 20em;
+    }
+
+}
+
 @media only screen and (min-width: 400px) {
 
     .char {
@@ -126,6 +194,17 @@ li>a {
         justify-content: center;
         align-items: center;
         margin: auto;
+    }
+
+    .pp {
+        width: 10em;
+        height: 10em;
+        border: 1em solid #00296b;
+        border-radius: 5em;
+        margin: auto;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        transition: .2s linear;
     }
 
     .msg {
@@ -151,6 +230,17 @@ li>a {
         margin: auto;
     }
 
+    .pp {
+        width: 15em;
+        height: 15em;
+        border: 1em solid #00296b;
+        border-radius: 10em;
+        margin: auto;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        transition: .2s linear;
+    }
+
     .msg {
         border-radius: 3em;
         margin-top: 1em;
@@ -171,6 +261,17 @@ li>a {
         justify-content: center;
         align-items: center;
         margin: auto;
+    }
+
+    .pp {
+        width: 15em;
+        height: 15em;
+        border: 1em solid #00296b;
+        border-radius: 10em;
+        margin: auto;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        transition: .2s linear;
     }
 
     .msg {
@@ -195,6 +296,17 @@ li>a {
         margin: auto;
     }
 
+    .pp {
+        width: 15em;
+        height: 15em;
+        border: 1em solid #00296b;
+        border-radius: 10em;
+        margin: auto;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        transition: .2s linear;
+    }
+
     .msg {
         border-radius: 2em;
         margin-top: 1em;
@@ -215,6 +327,17 @@ li>a {
         justify-content: center;
         align-items: center;
         margin: auto;
+    }
+
+    .pp {
+        width: 20em;
+        height: 20em;
+        border: 1em solid #00296b;
+        border-radius: 15em;
+        margin: auto;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        transition: .2s linear;
     }
 
     .msg {
